--- a/efl-online/package.json
+++ b/efl-online/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "efl-online",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage":"/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,13 +10,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axion": "^0.1.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.37.5",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
@@ -45,6 +49,16 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4"
   }
 }
