--- a/efl-online/package.json
+++ b/efl-online/package.json
@@ -5,13 +5,17 @@
   "homepage": "/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-react": "^33.0.4",
     "axion": "^0.1.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "flatpickr": "^4.6.13",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +26,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "sequelize": "^6.37.5",
+    "stable": "^0.1.8",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
