--- a/efl-online/package.json
+++ b/efl-online/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jws": "^3.2.3",
     "mysql2": "^3.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
